// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium", weight: regular and theme: dark 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 3.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #fff !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #ff0223 !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #ff0223 !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .09375em;
  left: 0;
  bottom: -.5em;
  background: #ff0223;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 3.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #000 !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #d5001c !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #d5001c !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .09375em;
  left: 0;
  bottom: -.5em;
  background: #d5001c;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", weight: regular and theme: light-electric 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 3.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #000 !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #00b0f4 !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #00b0f4 !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .09375em;
  left: 0;
  bottom: -.5em;
  background: #00b0f4;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular and theme: dark 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 2.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #fff !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #ff0223 !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #ff0223 !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .09375em;
  left: 0;
  bottom: -.5em;
  background: #ff0223;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 2.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #000 !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #d5001c !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #d5001c !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .09375em;
  left: 0;
  bottom: -.5em;
  background: #d5001c;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular and theme: light-electric 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 2.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #000 !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #00b0f4 !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #00b0f4 !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .09375em;
  left: 0;
  bottom: -.5em;
  background: #00b0f4;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: semibold and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 2.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #000 !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #d5001c !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #d5001c !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .125em;
  left: 0;
  bottom: -.5em;
  background: #d5001c;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  height: 2.25rem !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  margin: 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: inherit !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #000 !important;
  cursor: pointer !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:active),::slotted(a[aria-selected=\\"true\\"]),::slotted(button:active),::slotted(button[aria-selected=\\"true\\"]) {
  color: #d5001c !important;
}
::slotted(a:focus),::slotted(button:focus) {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible)),::slotted(button:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 1em !important;
}
@media (hover: hover) {
  ::slotted(a:hover),::slotted(button:hover) {
    color: #d5001c !important;
  }
}

.scroller {
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: .09375em;
  left: 0;
  bottom: -.5em;
  background: #d5001c;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}
@media(min-width:480px) {
  .scroller {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:760px) {
  .scroller {
    font-size: 1rem;
    line-height: 1.5;
  }
}

@media(min-width:1000px) {
  .scroller {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:1300px) {
  .scroller {
    font-size: 1rem;
    line-height: 1.5;
  }
}

@media(min-width:1760px) {
  .scroller {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}
"
`;
